--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <meta name="facebook-domain-verification" content="w2eay12g8ak1c8o5ripakygshzayy5" />
 
     </head>
   <body>
